# advent_of_code_2024

./: .clang-format  BUILD.bazel  MODULE.bazel  Makefile  README.md  aoc_2024.bzl
.github/workflows/: ci.yaml
puzzle_01/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_02/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_03/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_04/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_05/: BUILD.bazel  main.cpp  numbers.hpp  ordering.hpp  utils.hpp
puzzle_06/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_07/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_08/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_09/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_10/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_11/: BUILD.bazel  main.cpp  puzzle.hpp  utils.cpp  utils.hpp
puzzle_12/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_13/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_14/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_15/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_16/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_17/: BUILD.bazel  \  main.cpp  puzzle.hpp  utils.hpp
puzzle_18/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
puzzle_19/: BUILD.bazel  main.cpp  puzzle.hpp  utils.hpp
test/: BUILD.bazel  map_test.cpp  puzzle_01.cpp  puzzle_02.cpp  puzzle_03.cpp  puzzle_04.cpp  puzzle_05.cpp  puzzle_06.cpp  puzzle_07.cpp  puzzle_08.cpp  puzzle_09.cpp  puzzle_10.cpp  puzzle_11.cpp  puzzle_12.cpp  puzzle_13.cpp  puzzle_14.cpp  puzzle_15.cpp  puzzle_16.cpp  puzzle_17.cpp  puzzle_18.cpp  puzzle_19.cpp
utils/: BUILD.bazel  map.hpp  mover.hpp  position.hpp
