cc_binary(
    name = 'puzzle_05',
    deps = ['puzzle_05_input'],
    srcs = ['puzzle_05/main.cpp'],
    copts = [
        "-Wall",
        "-std=c++17",
        ],
)
cc_library(
    name = 'puzzle_05_input',
    hdrs = ['puzzle_05/ordering.hpp', 'puzzle_05/numbers.hpp', 'puzzle_05/utils.hpp'],
)

cc_test(
    name = "puzzle_05_test",
    size = "small",
    srcs = ["test/puzzle_05.cpp"],
    deps = [
        "puzzle_05_input",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-std=c++17",
        ],
)
