load("//:aoc_2024.bzl", "aoc_2024_cc_test")

aoc_2024_cc_test("01")
aoc_2024_cc_test("02")
aoc_2024_cc_test("03")
aoc_2024_cc_test("04")
aoc_2024_cc_test("05")
aoc_2024_cc_test("06")
aoc_2024_cc_test("07")
aoc_2024_cc_test("08")
aoc_2024_cc_test("09")
aoc_2024_cc_test("10")
aoc_2024_cc_test("11")
aoc_2024_cc_test("12")
aoc_2024_cc_test("13")
aoc_2024_cc_test("14")
aoc_2024_cc_test("15")
aoc_2024_cc_test("16")
aoc_2024_cc_test("17")
aoc_2024_cc_test("18")
aoc_2024_cc_test("19")



cc_test(
    name = "map_test",
    size = "small",
    srcs = ["map_test.cpp"],
    deps = [
        "//utils:aoc_utils",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-std=c++17",
        ],
)
